# thingmaker

./: CLAUDE.md
braxton-visualizer/: AGENTS.md  README.md  index.html  pyproject.toml  sketch.js  style.css
braxton-visualizer/data/ta-w/v1/: glossary.json  glossary_integration.json  manifest.json
braxton-visualizer/data/ta-w/v1/diagrams/: skipped-manual-split.txt
braxton-visualizer/data/ta-w/v1/diagrams/1-World-Music/: TAW-V1-1-World-Music-01.json  TAW-V1-1-World-Music-01.missing.json  TAW-V1-1-World-Music-02.json  TAW-V1-1-World-Music-02.missing.json  TAW-V1-1-World-Music-03.json  TAW-V1-1-World-Music-03.missing.json  TAW-V1-1-World-Music-05.json  TAW-V1-1-World-Music-05.missing.json  TAW-V1-1-World-Music-07.json  TAW-V1-1-World-Music-07.missing.json  TAW-V1-1-World-Music-08.json  TAW-V1-1-World-Music-08.missing.json  TAW-V1-1-World-Music-09.json  TAW-V1-1-World-Music-09.missing.json
braxton-visualizer/data/ta-w/v1/diagrams/2-Western-Art-Music/: TAW-V1-2-Western-Art-Music-01.json  TAW-V1-2-Western-Art-Music-01.missing.json  TAW-V1-2-Western-Art-Music-04.json  TAW-V1-2-Western-Art-Music-04.missing.json  TAW-V1-2-Western-Art-Music-05.json  TAW-V1-2-Western-Art-Music-05.missing.json  TAW-V1-2-Western-Art-Music-07.json  TAW-V1-2-Western-Art-Music-07.missing.json  TAW-V1-2-Western-Art-Music-08.json  TAW-V1-2-Western-Art-Music-08.missing.json  TAW-V1-2-Western-Art-Music-09.json  (+7 more)
braxton-visualizer/scripts/: auto_fit_diagram.py  build_manifest.py  check-glossary-matches.js  check_missing_glossary.py  extract_v1_images.py  render-overlay.py
viv-history/: CHANGES.md  (+3 more)
(+44 files in other folders)
